Comence el main y oculte el css del header

--- a/index.html
+++ b/index.html
@@ -33,5 +33,21 @@
         </div>
         <!---------------- Final de Header ----------------------->
     </header>
+    <!-- ---------------- Comienzo del Main----------------------- -->
+    <main>
+       <div class="container-main">
+             <div class="titulo">
+                 <p class="saludo">¡Hola! Soy</p>
+                  <h1 class="nombre"> Belen Agüero </h1>  
+                  <p class="breve-descripcion"> Desarrolladora, diseñadora etc.</p>
+
+                 <button class="btn-primero"> LO QUE HAGO</button>                    
+             </div> 
+                 <div class="imagen">
+                     <img class="imagen-uno" src="imagenes/undraw_Programmer_re_owql.png" alt  >
+                 </div>
+      </div>
+       <!-- Final de Main -->
+   </main>
 </body>
 </html>
