--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amaranth:wght@700&family=Poppins:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styless.css">
 
     <title>Portfolio-N1</title>
@@ -38,7 +41,7 @@
        <div class="container-main">
              <div class="titulo">
                  <p class="saludo">¡Hola! Soy</p>
-                  <h1 class="nombre"> Belen Agüero </h1>  
+                  <h1 class="nombre"> Gisela Agüero </h1>  
                   <p class="breve-descripcion"> Desarrolladora, diseñadora etc.</p>
 
                  <button class="btn-primero"> LO QUE HAGO</button>                    
