Termine el main por ahora

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                  <button class="btn-primero"> LO QUE HAGO</button>                    
              </div> 
                  <div class="imagen">
-                     <img class="imagen-uno" src="imagenes/undraw_Programmer_re_owql.png" alt  >
+                     <img class="imagen-uno" src="inicio-foto-bienvenida.png" alt  >
                  </div>
       </div>
        <!-- Final de Main -->
