--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/96cdc70ae5.js" crossorigin="anonymous"></script>    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amaranth:wght@700&family=Poppins:wght@600&display=swap" rel="stylesheet">
@@ -38,19 +39,67 @@
     </header>
     <!-- ---------------- Comienzo del Main----------------------- -->
     <main>
-       <div class="container-main">
-             <div class="titulo">
+         <div class="container-main">
+                <div class="titulo">
                  <p class="saludo">¡Hola! Soy</p>
                   <h1 class="nombre"> Gisela Agüero </h1>  
                   <p class="breve-descripcion"> Desarrolladora, diseñadora etc.</p>
 
                  <button class="btn-primero"> LO QUE HAGO</button>                    
-             </div> 
+                 </div> 
                  <div class="imagen">
-                     <img class="imagen-uno" src="inicio-foto-bienvenida.png" alt  >
+                     <img class="imagen-uno" src="Imagenes/inicio-foto-bienvenida.png" alt  >
                  </div>
-      </div>
+         </div>
        <!-- Final de Main -->
-   </main>
+
+    </main>
+    </main>
+<!-- -----------------Comienzo de seccion de "Mis conocimientos" ------------->
+   <section class="mis-conocimientos">
+        <div class="titulo-descripcion">
+             <h2 class="segundo-titulo">Mis conocimientos</h2>
+             <p class="parrafo-conocimientos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ratione consectetur cumque veniam delectus corporis aspernatur quae, vel illum commodi, dolor magnam in fuga voluptate. Veniam omnis ratione repellat voluptate.</p>
+        </div>
+        <div class="imagenes-de-conocimientos">
+ <!---------------------------------- Separacion de cuadrados con iconos -------------------------->
+            <div class="icono">
+                <a href="#"> 
+                   <i class="fa-brands fa-html5"></i>
+                </a>
+                    <p>HTML 5</p>
+            </div>
+            <div class="icono">
+                <a href="#"> 
+                    <i class="fa-brands fa-css3-alt"></i>
+                </a>
+                    <p>CSS 3</p>
+             </div>
+            <div class="icono">
+                <a href="#">
+                    <i class="fa-brands fa-sass"></i>
+                </a>
+                    <p>Sass</p>
+            </div>
+            <div class="icono">
+                <a href="#">
+                    <i class="fa-brands fa-js"></i>
+                </a>
+                    <p>JavaScript</p>
+            </div>
+            <div class="icono">
+                <a href="#">
+                    <i class="fa-brands fa-react"></i>
+                </a>                
+                    <p>React</p>
+            </div>
+            <div class="icono">
+                <a href="#">
+                    <i class="fa-brands fa-git-alt"></i>
+                </a>
+                    <p>GIT</p>
+            </div>
+         </div>
+
 </body>
 </html>
