--- a/index.html
+++ b/index.html
@@ -59,44 +59,40 @@
    <section class="mis-conocimientos">
         <div class="titulo-descripcion">
              <h2 class="segundo-titulo">Mis conocimientos</h2>
-             <p class="parrafo-conocimientos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere ratione consectetur cumque veniam delectus corporis aspernatur quae, vel illum commodi, dolor magnam in fuga voluptate. Veniam omnis ratione repellat voluptate.</p>
+             <p class="parrafo-conocimientos">Lorem ipsum dolor sit amet consectetur adipisicing elit.r quae, . Veniam omnis ratione repellat voluptate.</p>
         </div>
-        <div class="imagenes-de-conocimientos">
+        <div class="iconos-de-conocimientos">
  <!---------------------------------- Separacion de cuadrados con iconos -------------------------->
             <div class="icono">
                 <a href="#"> 
-                   <i class="fa-brands fa-html5"></i>
+                    <i class="fa-brands fa-html5" style="color: #d35017;"></i>
                 </a>
                     <p>HTML 5</p>
             </div>
             <div class="icono">
                 <a href="#"> 
-                    <i class="fa-brands fa-css3-alt"></i>
-                </a>
+                    <i class="fa-brands fa-css3-alt" style="color: #3d8fc6;"></i>                </a>
                     <p>CSS 3</p>
              </div>
             <div class="icono">
                 <a href="#">
-                    <i class="fa-brands fa-sass"></i>
+                    <i class="fa-brands fa-sass" style="color: #cd699b;"></i>
                 </a>
                     <p>Sass</p>
             </div>
             <div class="icono">
                 <a href="#">
-                    <i class="fa-brands fa-js"></i>
-                </a>
+                    <i class="fa-brands fa-js" style="color: #f0db4f;"></i>                </a>
                     <p>JavaScript</p>
             </div>
             <div class="icono">
                 <a href="#">
-                    <i class="fa-brands fa-react"></i>
-                </a>                
+                    <i class="fa-brands fa-react" style="color: #61e5ff;"></i>                </a>                
                     <p>React</p>
             </div>
             <div class="icono">
                 <a href="#">
-                    <i class="fa-brands fa-git-alt"></i>
-                </a>
+                    <i class="fa-brands fa-git-alt" style="color: #f34f29;"></i>                </a>
                     <p>GIT</p>
             </div>
          </div>
