ajuste varios tamaños de todo el css, borre links y agregue clases container

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 </head>
 <body>
     <!-- ------------ Comienzo de Header--------------- -->
+<div class="container-padre">
     <header>
         <!-- Comienzo de Header  -->
-        <div class="container">
+        <div class="container-header">
                    <nav>
                 <div class="nav-navegacion">
  <!--... No borre las listas porque aun estoy probando  -->
@@ -56,7 +57,9 @@
     </main>
     </main>
 <!-- -----------------Comienzo de seccion de "Mis conocimientos" ------------->
-   <section class="mis-conocimientos">
+<section class="mis-conocimientos">
+<div class="container-conocimientos">
+   <!-- <section class="mis-conocimientos"> -->
         <div class="titulo-descripcion">
              <h2 class="segundo-titulo">Mis conocimientos</h2>
              <p class="parrafo-conocimientos">Lorem ipsum dolor sit amet consectetur adipisicing elit.r quae, . Veniam omnis ratione repellat voluptate.</p>
@@ -95,9 +98,9 @@
                     <i class="fa-brands fa-git-alt" style="color: #f34f29;"></i>                </a>
                     <p>GIT</p>
             </div>
-         </div>
-            <!----------------------- Fin de seccion de "Mis conocimientos" ---------------->
-    
+        </div>
+    </div>
+    </section>    <!----------------------- Fin de seccion de "Mis conocimientos" ---------------->
     <section class="frase">
             <!----------------- Comienzo de seccion de "frase" --------------->
            <div class="container-frase">
@@ -107,11 +110,11 @@
                   <p class="frase-elegida">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus optio quasi nihil excepturi, enim odio eaque explicabo, debitis amet asperiores quam laboriosam, voluptatem possimus corporis voluptatum itaque fugit inventore distinctio?
                  </p>
-                 <h3 class="autor-de-frase">
+                 <h3 class="">
                  someone
                   </h3>
            </div> <!-- Fin de seccion de "frase" -->
     </section>
-    
+</div>
 </body>
 </html>
