acomode elcss y agregue las descripciones, tambien le agregue color

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/96cdc70ae5.js" crossorigin="anonymous"></script>    
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@900&family=Oxygen:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@900&family=Open+Sans:wght@300&family=Oxygen:wght@700&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="styless.css">
 
@@ -30,11 +30,11 @@
             <div class="titulo">
                 <p class="saludo">¡Hola! Soy</p>
                 <h1 class="nombre">Gisela Agüero</h1>
-                <p class="breve-descripcion">Desarrolladora, diseñadora, etc.</p>
+                <p class="breve-descripcion">Desarrolladora y futura diseñadora.</p>
                 <div class="btn-primero">LO QUE HAGO</div>
             </div>
             <div class="imagen">
-                <img class="imagen-uno" src="Imagenes/inicio-foto-bienvenida7.png" alt="">
+                <img class="imagen-uno" src="Imagenes/inicio-foto-bienvenida7 (2).png" alt="">
             </div>
         </div>
     </main>
@@ -44,7 +44,8 @@
     <div class="mis-conocimientos">
         <div class="titulo-descripcion">
              <h2 class="segundo-titulo">Mis conocimientos</h2>
-             <p class="parrafo-conocimientos">Lorem ipsum dolor sit amet consectetur adipisicing elit.r quae, . Veniam omnis ratione repellat voluptate.</p>
+             <p class="parrafo-conocimientos">En este camino de aprendizaje, estoy comprometida a contribuir y aprender continuamente. Como mujer en tecnología, estoy emocionada de ser parte de la diversa y creciente comunidad frontend.
+            </p>
         </div>
         <div class="iconos-de-conocimientos">
  <!---------------------------------- Separacion de cuadrados con iconos -------------------------->
@@ -83,10 +84,10 @@
              <i class="fa-solid fa-quote-right" style="color: #ffffff;"></i>                 
           </div> 
               <p class="frase-elegida">
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus optio quasi nihil excepturi, enim odio eaque explicabo, debitis amet asperiores quam laboriosam, voluptatem possimus corporis voluptatum itaque fugit inventore distinctio?
+                Me gusta entrar en áreas donde tengo miedo. El miedo es una señal de que voy en la dirección correcta
               </p>
                <h3 class="autor-de-frase">
-                someone
+                April Greiman
               </h3>
     </div>
 </div>
@@ -99,44 +100,43 @@
             <h4 class="titulo-proyecto">
                 Mis proyectos
             </h4>
-            <p class="descripcion-proyectos">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, similique. Quas quis fuga sed iure nihil
-            </p>
-            </div>
+            <p class="descripcion-proyectos"> 
+                ¡Explora mis creaciones y descubre cómo cada proyecto representa un paso en mi evolución como profesional de la programación!</P>
+                        </div>
              <div class="cards-de-proyectos">
             <div class="card-proyecto">
                 <a href="#" class="adentro-card">
-                    <img src="Imagenes/undraw_Working_late_re_0c3y.png" alt="">
+                    <img src="Imagenes/portfolio.png" alt="">
                     <p>Portfolio</p>
                 </a></div>
             <div class="card-proyecto">
                 <a href="#" class="adentro-card">
-                    <img src="Imagenes/generador-de-memes.png" alt="">
+                    <img src="Imagenes/generador-de-memes (2).png" alt="">
                     <p>Generador de memes</p>
                 </a></div>
             <div class="card-proyecto">
                 <a href="#" class="adentro-card">
-                    <img src="Imagenes/match.png" alt="">
+                    <img src="Imagenes/match (2).png" alt="">
                     <p>Match</p>
                 </a></div>
             <div class="card-proyecto">
                 <a href="#">
-                    <img src="Imagenes/controlador-de-gastos.png" alt="">
+                    <img src="Imagenes/controlador-de-gastos (2).png" alt="">
                     <p>Controlador de gastos</p>
                 </a></div>
             <div class="card-proyecto">
                 <a href="#">
-                    <img src="Imagenes/administrados-de-reuniones.png" alt="">
+                    <img src="Imagenes/adminitrador-de-reuniones (2).png" alt="">
                     <p>Adminitrador de reuniones</p>
                 </a></div>
             <div class="card-proyecto">
                 <a href="#" class="adentro-card">
-                    <img src="Imagenes/todo-app.png" alt="">
+                    <img src="Imagenes/todo-app (2).png" alt="">
                     <p>Todo app</p>
                 </a></div>
             <div class="card-proyecto">
                 <a href="#" class="adentro-card">
-                    <img src="Imagenes/buscador-de-peliculas.png" alt="">
+                    <img src="Imagenes/buscador-de-peliculas (2).png" alt="">
                     <p>Buscador de peliculas</p>
                 </a>
             </div>
@@ -153,7 +153,7 @@
               <h5 class="titulo-contactame">
              Contactame
               </h5>
-               <p class="parrafo-de-contacto"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit ipsum earum corrupti voluptatem quod laudantium enim quis sequi vel eaque aut dolore voluptate dicta facere, porro, tempora, praesentium eligendi possimus.
+               <p class="parrafo-de-contacto"> ¡Hola! 👋 Me encantaría conectarme contigo. Estoy emocionada por la posibilidad de colaborar en nuevos proyectos y aprender más sobre las increíbles oportunidades que ofrece el mundo del desarrollo web.
                </p>
                
             <nav class="container-contacto">
@@ -277,7 +277,7 @@
 
     <!-- Aqui van de nuevo los links del header -->
    <div class="saludo-final">
-         <p>Hecho con amor por Belen </p>
+         <p>Hecho con amor 🩷 por Gisela </p>
     </div>
 </footer>
     <!-- Final del footer -->
