corrigiendo ultimos erores

--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="57x57" href="favicon/">
-<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-<link rel="manifest" href="favicon/manifest.json">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
 
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
     <script src="https://kit.fontawesome.com/96cdc70ae5.js" crossorigin="anonymous"></script>    
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -53,7 +53,7 @@
                 <div class="btn-primero">LO QUE HAGO</div>
             </div>
             <div class="imagen">
-                <img class="imagen-uno" src="Imagenes/inicio-foto-bienvenida7 (2).png" alt="">
+                <img class="imagen-uno"src="Imagenes/inicio-foto-bienvenida7(2).png"alt="">
             </div>
         </div>
     </main>
@@ -130,32 +130,32 @@
                 </a></div>
             <div class="card-proyecto">
                 <a href="#" class="adentro-card">
-                    <img src="Imagenes/generador-de-memes (2).png" alt="">
+                    <img src="Imagenes/generador-de-memes(2).png" alt="">
                     <p>Generador de memes</p>
                 </a></div>
             <div class="card-proyecto">
                 <a href="#" class="adentro-card">
-                    <img src="Imagenes/match (2).png" alt="">
+                    <img src="Imagenes/match(2).png" alt="">
                     <p>Match</p>
                 </a></div>
             <div class="card-proyecto">
                 <a href="#">
-                    <img src="Imagenes/controlador-de-gastos (2).png" alt="">
+                    <img src="Imagenes/controlador-de-gastos(2).png" alt="">
                     <p>Controlador de gastos</p>
                 </a></div>
             <div class="card-proyecto">
                 <a href="#">
-                    <img src="Imagenes/adminitrador-de-reuniones (2).png" alt="">
+                    <img src="Imagenes/adminitrador-de-reuniones(2).png" alt="">
                     <p>Adminitrador de reuniones</p>
                 </a></div>
             <div class="card-proyecto">
                 <a href="#" class="adentro-card">
-                    <img src="Imagenes/todo-app (2).png" alt="">
+                    <img src="Imagenes/todo-app(2).png" alt="">
                     <p>Todo app</p>
                 </a></div>
             <div class="card-proyecto">
                 <a href="#" class="adentro-card">
-                    <img src="Imagenes/buscador-de-peliculas (2).png" alt="">
+                    <img src="Imagenes/buscador-de-peliculas(2).png" alt="">
                     <p>Buscador de peliculas</p>
                 </a>
             </div>
@@ -230,7 +230,7 @@
                     placeholder="p.ej.:Agüero"
                     name="apellido"
                     class="form_input"
-                    id="input_nombre"
+                    id="input_apellido"
                     required
                   />
                 </div>
@@ -244,18 +244,18 @@
                     name="email"
                     class="form_input"
                     id="input_email"
-                    required
-                  />
+                    required />
+                 
                 </div>
+
                 <div class="input_container">
                     <label for="input_mensaje">Mensaje*</label>
                  <textarea name="mensaje" id="input_mensaje" cols="30" rows="10" placeholder="Escibeme aqui"></textarea>   
-            
                 </div>
+
                 <input type="submit" name="enviar" value="ENVIAR" class="btn-enviar"> 
               </div>
 </form>
-</div>
 </fieldset>
  </div>
     <!-- ---------------------------FIN DE SECCION "CONTACTAME"------------------------------------- -->
