termine mi portfolio

--- a/index.html
+++ b/index.html
@@ -255,7 +255,8 @@
 
                 <input type="submit" name="enviar" value="ENVIAR" class="btn-enviar"> 
               </div>
-</form>
+        </form>
+</div>
 </fieldset>
  </div>
     <!-- ---------------------------FIN DE SECCION "CONTACTAME"------------------------------------- -->
